HW5Redo, added MainActivityTest and Corrected TemperatureUITest, both pass